...
    <string name="lblTotalTeams">Teams</string>
    <string name="lblProfileInformation">Information</string>
    <string name="profile_tv_username">HI, %1$s</string>
    <string name="stepmonitor_plan_description">Plan: %1$s</string>
    <string name="base_api_url">http://142.134.23.52:8000/</string>
    <!--<string name="base_api_url">http://192.168.2.10:8000/</string>-->
    <string name="create">CREATE</string>
    <string name="etPlanCreateRequiredSteps">Required Steps</string>
    <string name="etPlanCreateTitle">Title</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_plans">Plans</string>
    <string name="nav_teams">Teams</string>
    <string name="submit">Submit</string>
    <string name="change">CHANGE</string>
    <string name="plan_update_required_steps">Update required steps</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="updated">UPDATED</string>
    <string name="hi">Hi</string>
    <string name="login_chk_remember_me">Remember Me</string>
    <string name="to_step">Record Steps</string>
    <string name="pace">steps/sec</string>
    <string name="plan_title">plan_title</string>
    <string name="plan_required_steps">plan_required_steps</string>
    <string name="plan_id">plan_id</string>
    <string name="plan_total_steps">plan_total_steps</string>
    <string name="lblRecentSteps">Recent Steps</string>
    <string name="lblRecentPlans">Recent Plans</string>
    <string name="title_activity_teams">TeamsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="to_user_plan_progress">Plan Progress</string>
    <string name="contributed_steps">Contributed Steps:</string>
    <string name="steps">Steps:</string>
</resources>

