...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softengi.mobcomp.softwareengi_mobile.PlansFragment">

    <ListView
        android:id="@+id/lvPlans"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@id/btnCreatePlan"
        android:layout_alignParentTop="true"
        android:divider="@color/colorWhiteTransparent">
    </ListView>

    <Button
        android:id="@+id/btnCreatePlan"
...
