...
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_above="@id/llPlanActions"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnToStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
...
